[gd_scene load_steps=5 format=2]

[ext_resource path="res://tiny bullet.png" type="Texture" id=1]
[ext_resource path="res://bulletscene.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 1.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1.5 )

[node name="bullets" type="RigidBody2D"]
collision_layer = 3
collision_mask = 3
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="TinyBullet" type="Sprite" parent="."]
position = Vector2( 1.19209e-07, -1 )
scale = Vector2( 1.34375, 1.3125 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_bullets_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
